--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,16 @@
 
   <body>
 
+
+
     {{{body}}}
+
+    <button>
+    <a href="./drones"> List of all Drones</a>
+</button>
+
+{{!-- <button> <a href="./drones/create"> Create Drones</a>
+</button> --}}
 
     <script src="/js/script.js"></script>
   </body>
