--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,18 @@
 <h2>Create a new drone</h2>
+
+
+<form action="/drones/create" method="post">
+
+<label for="name">Name</label>
+<input type="text">
+<br>
+<label for="propellers">Propellers</label>
+<input type="number">
+<br>
+<label for="maxSpeed">Speed</label>
+<input type="number">
+
+<button type="submit"> Create Drone</button>
+
+</form>
+
