--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -4,13 +4,13 @@
 <form action="/drones/create" method="post">
 
 <label for="name">Name</label>
-<input type="text">
+<input type="text" name="'name">
 <br>
 <label for="propellers">Propellers</label>
-<input type="number">
+<input type="number" name="propellers">
 <br>
 <label for="maxSpeed">Speed</label>
-<input type="number">
+<input type="number" name="maxSpeed">
 
 <button type="submit"> Create Drone</button>
 
