--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,14 +11,20 @@
 
   <body>
 
+<nav">
+         <div>
+            <a href="/">Home</a>
+            <a href="/drones">List the Drones</a>
+            <a href="/drones/create">Create a Drone</a>
+         </div>
+      </nav>
 
+<div>
+  {{{body}}}
+</div>
+    
 
-    {{{body}}}
-
-    <button>
-    <a href="./drones"> List of all Drones</a>
-</button>
-
+   
 {{!-- <button> <a href="./drones/create"> Create Drones</a>
 </button> --}}
 
