--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,17 @@
 <h2>Update the drone</h2>
+
+
+ <form action="/drones/{{data._id}}/edit" method="POST">
+
+    <label for="name">Name</label>
+    <input type="text" name="name" value="{{data.name}}">
+        <br>
+    <label for="propellers">Propellers</label>
+    <input type="text" name="propellers" value="{{data.propellers}}">
+        <br>
+    <label for="maxSpeed">Speed</label>
+    <input type="text" name="maxSpeed" value="{{data.maxSpeed}}">
+         <br>
+     <button type="submit">Update</button>
+
+ </form>
